[gd_scene load_steps=4 format=3 uid="uid://b2d0m4xo3phbu"]

[ext_resource type="Script" path="res://chave.gd" id="1_ouv7p"]
[ext_resource type="Texture2D" uid="uid://flux5h7qp7ax" path="res://Recursos/chave teste.png" id="2_bbvfy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8x6y8"]
size = Vector2(37, 20)

[node name="chave" type="Node2D"]
script = ExtResource("1_ouv7p")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.22222, 2.22222)
texture = ExtResource("2_bbvfy")

[node name="Area2D" type="Area2D" parent="." groups=["dropable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_8x6y8")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
